# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 2021_03_28_085424) do
+ActiveRecord::Schema.define(version: 2021_03_28_124617) do
 
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
@@ -21,7 +21,16 @@ ActiveRecord::Schema.define(version: 2021_03_28_085424) do
     t.bigint "genre_id", null: false
     t.datetime "created_at", precision: 6, null: false
     t.datetime "updated_at", precision: 6, null: false
+    t.bigint "artist_id", null: false
+    t.index ["artist_id"], name: "index_albums_on_artist_id"
     t.index ["genre_id"], name: "index_albums_on_genre_id"
+  end
+
+  create_table "artists", force: :cascade do |t|
+    t.string "name", limit: 64, null: false
+    t.string "description"
+    t.datetime "created_at", precision: 6, null: false
+    t.datetime "updated_at", precision: 6, null: false
   end
 
   create_table "genres", force: :cascade do |t|
@@ -31,5 +40,6 @@ ActiveRecord::Schema.define(version: 2021_03_28_085424) do
     t.index ["name"], name: "index_genres_on_name", unique: true
   end
 
+  add_foreign_key "albums", "artists"
   add_foreign_key "albums", "genres"
 end
